--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "advent-of-code-2022"]
 	path = advent-of-code-2022
 	url = git@github.com:1112zakaria/advent-of-code-2022.git
+[submodule "go-network-programming"]
+	path = go-network-programming
+	url = git@github.com:1112zakaria/go-network-programming.git
